# OpenGL_Study

./: .gitignore  CMakeLists.txt  Hello_Triangle.cpp  OpenGL_test.cpp  README.md  myHello_Triangle.cpp
app/: CMakeLists.txt  Hello_Triangle.cpp  UBO.cpp  blending.cpp  blinn_Phong.cpp  camera.cpp  cast_light.cpp  cubeTexture.cpp  frameBuffer.cpp  light.cpp  material.cpp  mtaExperiment.cpp  multiLight.cpp  myUniform.cpp  orthshadow.cpp  planet.cpp  sierpinski.cpp  sphere.cpp  stencil.cpp  texture.cpp
include/: camera.h  mesh.h  model.h  myMesh.h  myModel.h  myinclude.h  shader.h
include/glad/: glad.h
lib/: assimp-vc142-mtd.lib
old_test/: UBO.cpp  coordinate.cpp  cubeTexture.cpp  loadobj.cpp  material.cpp  mtaExperiment.cpp  multiLight.cpp  myHello_Triangle.cpp  objExperiment.cpp  planet.cpp  sphere.cpp  texture.cpp  texture_light.cpp  transform.cpp  yy_file.cpp
shader/shader_fragment/: fblending.glsl  fcast_cube.glsl  flamp.glsl  fmodel.glsl  fmultilight.glsl  freflect.glsl  fscreen.glsl  fstencil.glsl  fubo.glsl
shader/shader_vertex/: vblending.glsl  vcube.glsl  vlamp2.glsl  vmodel2.glsl  vreflect.glsl  vsierpin.glsl  vsphere.glsl  vubo.glsl
source/: CMakeLists.txt  glad.c  mysource.cpp  shader.cpp
source/shader/: fblinn.glsl  fcube.glsl  fmaterial.glsl  fmodel.glsl  fmodel2.glsl  fmultilight.glsl  fshader.glsl  ftexture.glsl  vblack.glsl  vcube.glsl
source/shader/YY_shader/: shadow_mapping.fs  shadow_mapping.vs  shadow_mapping_depth.fs  shadow_mapping_depth.vs
study_record/: record.md
