CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
PROJECT(OpenGL_test)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_STANDARD 14)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

INCLUDE_DIRECTORIES(./include)
INCLUDE_DIRECTORIES(./include/GLFW)
INCLUDE_DIRECTORIES(./include/glad)
INCLUDE_DIRECTORIES(./include/KHR)


LINK_DIRECTORIES(./lib)

ADD_SUBDIRECTORY(./source)

ADD_EXECUTABLE(myHello_Triangle myHello_Triangle.cpp)
TARGET_LINK_LIBRARIES(myHello_Triangle SUB_LIB glfw3 opengl32)