CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
PROJECT(OpenGL_test)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_STANDARD 14)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

INCLUDE_DIRECTORIES(./include)
INCLUDE_DIRECTORIES(./include/GLFW)
INCLUDE_DIRECTORIES(./include/glad)
INCLUDE_DIRECTORIES(./include/KHR)
INCLUDE_DIRECTORIES(./include/assimp)


LINK_DIRECTORIES(./lib)
SET(GL_LIBRARY
        glfw3
        opengl32
)

ADD_SUBDIRECTORY(./source)
ADD_SUBDIRECTORY(./app)