CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
PROJECT(OpenGL_test)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_STANDARD 14)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/GLFW)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/glad)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/KHR)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/assimp)


LINK_DIRECTORIES(./lib)
SET(GL_LIBRARY
        opengl32
)

ADD_SUBDIRECTORY(./source)
ADD_SUBDIRECTORY(./app)